# traveltogether

./: .dockerignore  .env.example  CLAUDE.md  CONTEXT.md  DESIGN.md  README.md  biome.json  commitlint.config.mjs  docker-compose.yml  lefthook.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  skills-lock.json
apps/api/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml
apps/api/alembic/: env.py  script.py.mako
apps/api/alembic/versions/: 0001_baseline.py  0002_identidade.py  0003_rate_events.py  0004_trips.py  4d3bbcfac085_initial_schema_users_trips_memberships.py  7039512b819d_pending_memberships.py  a1b2c3d4e5f6_stops.py  b2c3d4e5f6a7_legs.py  c3d4e5f6a7b8_fare_quotes.py  d4e5f6a7b8c9_upvotes.py  e5f6a7b8c9d0_chosen_fare.py  f6a7b8c9d0e1_trip_period_airport.py  g7h8i9j0k1l2_stop_airport.py  h8i9j0k1l2m3_trip_cover_image.py  i9j0k1l2m3n4_stop_cover_image.py  j0k1l2m3n4o5_itinerary_items.py  k1l2m3n4o5p6_user_profile.py  l2m3n4o5p6q7_trip_stop_coordinates.py  m3n4o5p6q7r8_comments.py  n4o5p6q7r8s9_tasks.py  o5p6q7r8s9t0_budget.py  p6q7r8s9t0u1_invitations.py  q7r8s9t0u1v2_notifications.py  r8s9t0u1v2w3_digest_state.py  s9t0u1v2w3x4_routes_segments.py  u1v2w3x4y5z6_fare_points.py
apps/api/src/travelmanager/: auth.py  db.py  main.py  models.py  schemas.py  sessions.py
apps/api/src/traveltogether/: db.py  main.py
apps/api/tests/: conftest.py  test_api_image.py  test_auth_routes.py  test_db_schema.py  test_db_url.py  test_email_digest.py  test_env.py  test_eua_trip_e2e.py  test_health.py  test_models.py  test_object_storage.py  test_readiness.py  test_schemas.py  test_sessions.py
apps/api/tests/budget/: test_router.py  test_service.py
apps/api/tests/collaboration/: test_router.py  test_service.py  test_task_router.py  test_task_service.py
apps/api/tests/fares/: test_chosen_router.py  test_chosen_service.py  test_leg_fare_status.py  test_router.py  test_service.py  test_upvotes_router.py  test_upvotes_service.py
apps/api/tests/identity/: conftest.py  test_auth.py  test_create_session.py  test_google_routes.py  test_google_verifier.py  test_models.py  test_otp_adapters.py  test_otp_router.py  test_otp_routes.py  test_otp_service.py  test_rate_limiter.py  test_repository.py  test_request_otp.py  test_resolve_session.py  test_revoke_session.py  test_router.py  test_routes.py  test_rules.py  test_schemas.py  test_service.py  test_sign_in_with_google.py  test_verify_otp.py
apps/api/tests/integration/: test_migration.py
apps/api/tests/notifications/: test_digest_service.py  test_producers.py  test_router.py  test_service.py
apps/api/tests/shared/: test_airlines.py  test_airports.py  test_airports_router.py  test_places.py
apps/api/tests/trips/: conftest.py  test_activity_service.py  test_coordinates.py  test_create_trip.py  test_invitations.py  test_itinerary_router.py  test_itinerary_service.py  (+17 more)
(+408 files in other folders)
