[project]
name = "traveltogether-api"
version = "0.0.0"
description = "traveltogether API (FastAPI)."
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "sqlalchemy>=2.0",
    "psycopg2-binary>=2.9",
    "pyjwt[crypto]>=2.8",
    "sqlmodel>=0.0.22",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "ruff>=0.9",
    "pyright>=1.1.390",
    "types-psycopg2>=2.9",
    "httpx2>=2.3.0",
    "pytest-anyio>=0.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/traveltogether"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC"]

[tool.pyright]
include = ["src", "tests"]
pythonVersion = "3.13"
typeCheckingMode = "strict"
venvPath = "."
venv = ".venv"

[tool.pytest.ini_options]
markers = [
    "integration: testes que exigem Postgres real — excluídos do gate pre-push",
]
