[project]
name = "traveltogether"
version = "0.0.0"
description = "API do travel·together"
requires-python = ">=3.13"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.34",
]

[dependency-groups]
dev = [
  "httpx>=0.28",
  "pyright>=1.1.390",
  "pytest>=8.3",
  "ruff>=0.9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/traveltogether"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pyright]
include = ["src", "tests"]
pythonVersion = "3.13"
typeCheckingMode = "standard"
venvPath = "."
venv = ".venv"

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
  "integration: testes que exigem serviços externos (ex.: Postgres); fora do gate unitário",
]
